--- a/bat/rd-mailform.config.json
+++ b/bat/rd-mailform.config.json
@@ -3,6 +3,6 @@
   "host": "stmp.gmail.com",
   "port": 465,
   "username": "c.sualidaquila@gmail.com",
-  "password": "coro1su2ali3daquila4",
+  "password": "",
   "recipientEmail": "c.sualidaquila@gmail.com"
 }
